--- a/demoMusic/Base.lproj/Main.storyboard
+++ b/demoMusic/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,53 +19,91 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="elX-go-m20">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="elX-go-m20">
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdl-Vl-SB8">
-                                <rect key="frame" x="150" y="512" width="82" height="76"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="play"/>
-                                <connections>
-                                    <action selector="btnPlayPause:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Nm-2B-juF"/>
-                                </connections>
-                            </button>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="-1.5" minValue="-1.5" maxValue="1.5" translatesAutoresizingMaskIntoConstraints="NO" id="8Vr-hk-AjS">
-                                <rect key="frame" x="68" y="441" width="226" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="valueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="tb4-Cz-Jw2"/>
-                                </connections>
-                            </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcN-aG-MuU">
-                                <rect key="frame" x="10" y="446" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aPR-rk-bXA">
-                                <rect key="frame" x="317" y="446" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ol9-PM-HbY">
-                                <rect key="frame" x="231" y="539" width="39" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="foward"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TXH-yf-Z4q">
-                                <rect key="frame" x="103" y="539" width="39" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="revind"/>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iLF-SE-7ql" userLabel="Play Bar View">
+                                <rect key="frame" x="10" y="19" width="647" height="200"/>
+                                <subviews>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="-1.5" minValue="-1.5" maxValue="1.5" translatesAutoresizingMaskIntoConstraints="NO" id="8Vr-hk-AjS">
+                                        <rect key="frame" x="47" y="85" width="553" height="31"/>
+                                        <connections>
+                                            <action selector="valueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="tb4-Cz-Jw2"/>
+                                        </connections>
+                                    </slider>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcN-aG-MuU">
+                                        <rect key="frame" x="0.0" y="92" width="39" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aPR-rk-bXA">
+                                        <rect key="frame" x="608" y="92" width="39" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="8Vr-hk-AjS" firstAttribute="leading" secondItem="OcN-aG-MuU" secondAttribute="trailing" constant="10" id="1K0-Mz-sZI"/>
+                                    <constraint firstAttribute="height" constant="200" id="8Ur-xR-Je6"/>
+                                    <constraint firstItem="aPR-rk-bXA" firstAttribute="centerY" secondItem="OcN-aG-MuU" secondAttribute="centerY" id="AXM-RH-Rea"/>
+                                    <constraint firstItem="OcN-aG-MuU" firstAttribute="centerY" secondItem="iLF-SE-7ql" secondAttribute="centerY" id="Iva-WV-QWS"/>
+                                    <constraint firstItem="aPR-rk-bXA" firstAttribute="leading" secondItem="8Vr-hk-AjS" secondAttribute="trailing" constant="10" id="Pmi-tg-WQ4"/>
+                                    <constraint firstItem="8Vr-hk-AjS" firstAttribute="centerY" secondItem="OcN-aG-MuU" secondAttribute="centerY" id="Zcl-b1-gcq"/>
+                                    <constraint firstItem="OcN-aG-MuU" firstAttribute="leading" secondItem="iLF-SE-7ql" secondAttribute="leading" id="orp-yc-aEp"/>
+                                    <constraint firstAttribute="trailing" secondItem="aPR-rk-bXA" secondAttribute="trailing" id="vBw-DH-7lQ"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aJ1-FJ-el5" userLabel="Control View">
+                                <rect key="frame" x="0.0" y="219" width="667" height="76"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TXH-yf-Z4q" userLabel="Btn Left Control">
+                                        <rect key="frame" x="262.5" y="27" width="23" height="22"/>
+                                        <state key="normal" image="revind"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ol9-PM-HbY" userLabel="Btn Right Control">
+                                        <rect key="frame" x="381.5" y="27" width="24" height="22"/>
+                                        <state key="normal" image="foward"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdl-Vl-SB8">
+                                        <rect key="frame" x="295.5" y="0.0" width="76" height="76"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="rdl-Vl-SB8" secondAttribute="height" multiplier="1:1" id="8ha-Vb-xif"/>
+                                        </constraints>
+                                        <state key="normal" image="play"/>
+                                        <connections>
+                                            <action selector="btnPlayPause:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Nm-2B-juF"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="rdl-Vl-SB8" firstAttribute="height" secondItem="aJ1-FJ-el5" secondAttribute="height" id="1qJ-Z2-tpI"/>
+                                    <constraint firstItem="ol9-PM-HbY" firstAttribute="centerY" secondItem="rdl-Vl-SB8" secondAttribute="centerY" id="7PN-KE-sQF"/>
+                                    <constraint firstItem="rdl-Vl-SB8" firstAttribute="centerX" secondItem="aJ1-FJ-el5" secondAttribute="centerX" id="IuI-Pj-XGe"/>
+                                    <constraint firstItem="rdl-Vl-SB8" firstAttribute="leading" secondItem="TXH-yf-Z4q" secondAttribute="trailing" constant="10" id="W7M-rC-ZpA"/>
+                                    <constraint firstItem="ol9-PM-HbY" firstAttribute="leading" secondItem="rdl-Vl-SB8" secondAttribute="trailing" constant="10" id="ajl-sG-SeA"/>
+                                    <constraint firstItem="rdl-Vl-SB8" firstAttribute="centerY" secondItem="aJ1-FJ-el5" secondAttribute="centerY" id="ayJ-nh-i4w"/>
+                                    <constraint firstAttribute="height" constant="76" id="lVU-ND-bE7"/>
+                                    <constraint firstItem="TXH-yf-Z4q" firstAttribute="centerY" secondItem="rdl-Vl-SB8" secondAttribute="centerY" id="um3-19-dSR"/>
+                                </constraints>
+                            </view>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="aJ1-FJ-el5" secondAttribute="bottom" constant="80" id="2Fn-Tq-qXY"/>
+                            <constraint firstAttribute="trailing" secondItem="iLF-SE-7ql" secondAttribute="trailing" constant="10" id="57T-dY-Xha"/>
+                            <constraint firstItem="elX-go-m20" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="AQ3-uI-EgL"/>
+                            <constraint firstItem="elX-go-m20" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="BgR-Fx-1Jb"/>
+                            <constraint firstItem="iLF-SE-7ql" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="Eyp-AX-D6E"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="elX-go-m20" secondAttribute="bottom" id="NiY-sg-qcg"/>
+                            <constraint firstAttribute="trailing" secondItem="aJ1-FJ-el5" secondAttribute="trailing" id="WKp-0M-ahB"/>
+                            <constraint firstAttribute="trailing" secondItem="elX-go-m20" secondAttribute="trailing" id="iwH-1S-ZCz"/>
+                            <constraint firstItem="aJ1-FJ-el5" firstAttribute="top" secondItem="iLF-SE-7ql" secondAttribute="bottom" id="jBJ-Ww-87A"/>
+                            <constraint firstItem="aJ1-FJ-el5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wmz-AV-pKV"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="btnPlayPause" destination="rdl-Vl-SB8" id="5pC-bw-3jT"/>
